--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.0",
     "@libsql/client": "^0.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.39.1",
