--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@clerk/nextjs": "^6.12.0",
     "@libsql/client": "^0.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.3.0",
     "drizzle-orm": "^0.39.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.474.0",
@@ -32,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
