--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^3.12.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "posthog-js": "^1.227.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss-animate": "^1.0.7",
