--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^7.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.39.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.474.0",
@@ -33,6 +36,7 @@
     "posthog-js": "^1.227.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.2",
     "zod": "^3.23.3"
